fix:footer layout bug

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,3 +1,18 @@
 main {
   margin-top: 10rem;
 }
+
+main,
+header {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  main {
+    padding-right: 20px !important;
+    padding-left: 20px !important;
+  }
+}
