--- a/frontend/src/shared/components/Footer/Footer.module.css
+++ b/frontend/src/shared/components/Footer/Footer.module.css
@@ -1,6 +1,9 @@
 /* Foot Container */
 
 .foot-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   background-color: #d65a31;
   text-align: center;
   padding: 2% 0;
